Fix text spacing

--- a/_sass/openfaas/includes/pricing-page/pricing-table.scss
+++ b/_sass/openfaas/includes/pricing-page/pricing-table.scss
@@ -1,1 +1,5 @@
-.pricing{}
+.pricing{
+    .intro{
+        min-height: 50px;
+    }
+}
